Solución error creación de nueva cuenta y creación de las imagenes por cliente